<resources>
    <string name="app_name">myTour</string>
    <string name="desc">Default deskripcija</string>

    <string name="errUsername">Unesite validno korisničko ime!</string>
    <string name="errUsernameExists">Korisničko ime već postoji</string>
    <string name="errEmail">Unesite validnu e-mail adresu!</string>
    <string name="errPass">Unesite validnu lozinku!</string>
    <string name="errUserAlreadyExist">Već ste registrovani!</string>
    <string name="errConn">Nema internetske veze!</string>
    <string name="errEmailNoVerify">Vaš email nije verifikovan. Za ponovo slanje verifikacije kliknite ovdje!</string>
    <string name="errInvalidPass">Unesena lozinka nije tačna!</string>
    <string name="errInvalidUser">Korisnički nalog ne postoji!</string>
    <string name="errBruteForce">Upss... iskoristili ste sve pokušaje, pokušajte ponovo nakon 5 minuta!</string>
    <string name="errTooManyReq">Zahtjev ocijenjen kao spam, pokušajte ponovo kasnije!</string>
    <string name="errGoogleSignIn">Došlo je do pogreške, pokušajte ponovo kasnije!</string>
    <string name="errSignInFailed">Prijava neuspješna, pokušajte ponovo kasnije!</string>
    <string name="errSessionExipired">Sesija istekla, molimo prijavite se!</string>
    <string name="errNoUserExist">Korisnički nalog ne postoji, email nije poslat!</string>
    <string name="errUnknown">Došlo je do pogreške, pokušajte ponovo kasnije!</string>
    <string name="errAlreadySignedInPass">Već ste registrovani koristeći email, ukoliko niste vi, zatražite reset lozinke!</string>
    <string name="errLoader">Upss... došlo je do pogreške!</string>
    <string name="errDataLoading">Neuspješno dohvaćanje podataka!</string>
    <string name="errActionUnfinished">Molimo pričekajte!</string>
    <string name="errGettingData">Još samo trenutak, dohvaćamo podatke...</string>

    <string name="alright">Razumijem</string>
    <string name="rDataTipsTitle">Opss.. izgleda da vam ne ide od ruke, evo pomoći!</string>
    <string name="rDataTipsUsernameTitle">1. Korisničko ime</string>
    <string name="rDataTipsUsernameText">Vaše korisničko ime mora biti duže od 4 i kraće od 16 karaktera</string>
    <string name="rDataTipsEmailTitle">2. Email</string>
    <string name="rTipsEmailText">Vaš email smije sadržavati velika, mala slova, brojeve, i specijalne karaktere (. - _ +).</string>
    <string name="rDataTipsPasswordTitle">3. Lozinka</string>
    <string name="rTipsPasswordText">Vaša lozina treba biti duža od 8 karaktera, preporučujemo da koristite kombinaciju malih/velikih slova, brojeva i specijalnih karaktera.</string>
    <string name="rAccCreated">Korisnički nalog uspješno kreiran</string>

    <string name="title_activity_landing">LandingActivity</string>
    <string name="fHome">Početna</string>
    <string name="fLeaderboard">Ljestvica</string>
    <string name="fExplore">Istraži</string>
    <string name="fMap">Mapa</string>
    <string name="fProfile">Moj Profil</string>

    <string name="rTitle">myTour Registracija</string>
    <string name="rSubTitle">MOLIMO IZVRŠITE REGISTRACIJU!</string>
    <string name="rlEmail">E-MAIL ADRESA</string>
    <string name="rlUsername">KORISNIČKO IME</string>
    <string name="rlPass">LOZINKA</string>
    <string name="rPassAgain">PONOVO LOZINKA</string>
    <string name="rTerms">Registracijom prihvatate sve uslove korištenja</string>
    <string name="rBtn">MYTOUR REGISTRACIJA</string>

    <string name="lWellcome">Dobrodošli!</string>
    <string name="lSubTitle">MOLIMO PRIJAVITE SE!</string>
    <string name="lMyTour">MYTOUR PRIJAVA</string>
    <string name="lOR">ili</string>
    <string name="lForgotPass">Zaboravljena lozinka?</string>
    <string name="lRemember">ZAPAMTI MOJU PRIJAVU</string>
    <string name="lGoogle">Google prijava</string>
    <string name="lRedirectCreateAcc">Nemate MyTour nalog? Kliknite ovdje!</string>
    <string name="lSuccess">Prijava uspješna!</string>

    <string name="lResendedMail">Verifikaciski email poslat, provjerite sanduče!</string>
    <string name="lNotResendedMail">Verifikaciski email poslat, provjerite sanduče!</string>

    <string name="rsPasswordEmail">Email za reset lozinke poslat, provjerite sanduče!</string>
    <string name="rsUnknownErr">Došlo je do pogreške, pokušajte ponovo kasnije!</string>
    <string name="rsAlreadySent">Email je već poslat!</string>

    <string name="webcl_id">787058489748-2vm90c5kd8ljelpr0tg1hf9vejuv2jed.apps.googleusercontent.com</string>

    <string name="pUser">Korisnički podatci:</string>
    <string name="pStats">Statistika:</string>
    <string name="pInfoUsername">KORISNIČKO IME</string>
    <string name="pInfoNameAndSurname">IME I PREZIME</string>
    <string name="pInfoEmail">E-MAIL ADRESA</string>
    <string name="pInfoPhone">BROJ TELEFONA</string>
    <string name="pInfoGroup">KORISNIČKA GRUPA</string>
    <string name="pGroupUser">Korisnik</string>
    <string name="pGroupAdmin">Administrator</string>
    <string name="pSignedOut">Odjavljeni ste!</string>
    <string name="pAdmin">Administrator platforme</string>
    <string name="pDev">Developer platforme</string>
    <string name="pVerified">Verifikovani korisnik</string>
    <string name="pRef">Osvježi</string>
    <string name="pUnsavedData">Imate nespremljenih promjena, želite ih spremiti?</string>
    <string name="pApplyCancel">Odbaci</string>
    <string name="pApplySave">Spremi</string>
    <string name="pNoChangesMade">Niste napravili nikakve promjene!</string>
    <string name="pErrPasswrd">Lozinke se ne podudaraju, ili nisu dovoljno duge!</string>
    <string name="pPassChanged">Lozinka promjenjena!</string>
    <string name="pNameChanged">Ime promjenjeno!</string>
    <string name="pGoogleDeny">Akcija neuspjela, nalog kreiran pomoću Google-a!</string>
    <string name="pLoggedOut">Odjavljeni ste!</string>
    <string name="pCanceled">Radnja prekinuta!</string>

    <string name="editProfileTitle">Uređivanje profila</string>
    <string name="editProfileSubTitle">Uređivanje korisničkih podataka:</string>
    <string name="editPasswordNew">NOVA LOZINKA</string>
    <string name="editPasswordNewRepeat">PONOVO LOZINKA</string>

    <string name="phoneVerify">VERIFIKUJ</string>
    <string name="phoneNVerify">NEVERIFIKOVAN</string>
    <string name="phoneRemove">UKLONI</string>
    <string name="phoneVerifyTitle">Verifikacija broja telefona</string>
    <string name="phoneVerifySubtitle">Molimo unesite broj telefona!</string>
    <string name="phoneVerifyCode">Molimo unesite verifikaciski kod!</string>
    <string name="phoneVerifyDescFooter">Verifikacijom vašeg broja telefona postajete 100% verifikovani korisnik!</string>
    <string name="phoneHint">+387 6x xxx xxx</string>
    <string name="codeHint">xxx xxx</string>
    <string name="phoneVerifySend">Pošalji</string>
    <string name="phoneNotValid">Broj nije validan!</string>
    <string name="phoneVerified">Uspješna verifikacija!</string>
    <string name="phoneVerifyFiled">Došlo je do pogreške!</string>
    <string name="phoneCodeSent">Verifikaciski kod je poslat!</string>
    <string name="phoneCodeInvalid">Uneseni kod nije validan!</string>
    <string name="phoneUnlink">Da li želite ukloniti broj telefona?</string>
    <string name="phoneUnlinked">Broj uklonjen!</string>

    <string name="stPointsTitle">myTour TOKENI</string>
    <string name="stCityExplored">POSJEĆENO GRADOVA</string>
    <string name="stNaturePointExplored">POSJEĆENO ATRAKCIJA</string>
    <string name="stVillageExplored">POSJEĆENO SELA</string>
    <string name="stNacionalParkExplored">POSJEĆENO NACIONALNIH PARKOVA</string>

    <string name="stPoints">Tokeni</string>
    <string name="stCity">Gradovi</string>
    <string name="stNaturePoint">Atrakcije</string>
    <string name="stVillage">Sela</string>
    <string name="stNacionalPark">Nacionalni parkovi</string>

    <string name="stTOPPoints">Top 15 - myTour Tokeni</string>
    <string name="stTOPCity">Top 15 - Posjećeni gradovi</string>
    <string name="stTOPNaturePoint">Top 15 - Posjećene atrakcije</string>
    <string name="stTOPVillage">Top 15 - Posjećena sela</string>
    <string name="stTOPNacionalPark">Top15 - Posjećeni nacionalni parkovi</string>


    <string name="settProfHeader">Profil</string>
    <string name="settingsTitle">Postavke</string>
    <string name="settProfDelTitle">Brisanje naloga</string>
    <string name="settProfDelDesc">Ovom akcijom nalog i svi podatci biti će obrisani!</string>
    <string name="settDelProTxt">Da li želite trajno obristi nalog?</string>
    <string name="delCofnirm">Obriši</string>
    <string name="hello_blank_fragment">3213</string>

    <string name="hTitle">Dobrodošli nazad!</string>
    <string name="hSubTitle">Istražite dosad neistraženo!</string>
    <string name="hCityTitle">Izdvojeni gradovi</string>
    <string name="hNatureTitle">Izdvojene atrakcije</string>
    <string name="hVillageTitle">Izdvojena sela</string>
    <string name="hParkTitle">Izdvojeni nacionalni parkovi</string>
    <string name="hPopulation">Broj stanovnika:</string>
    <string name="hShowOnMap">Prikaži na mapi</string>
    <string name="hNearBy">Atrakcije u blizini</string>
    <string name="hNearByNoAttr">Nema atrakcija u blizini ovog mjesta.</string>
    <string name="heReviews">Ocjene i recenzije</string>

    <string name="titleNearBy">Atrakcije u blizini:</string>
    <string name="piMoreAbout">O mjestu:</string>

    <string name="ePhrase">Maštaj, istraži i otkriji,\n izbor je na vama!</string>
    <string name="eTitle">Zdravo, </string>
    <string name="eHint">Mjesto, atrakcija, selo... </string>
    <string name="eCity">Gradovi</string>
    <string name="eVill">Sela</string>
    <string name="eAttr">Atrakcije</string>
    <string name="eNPark">Nacionalni parkovi </string>
    <string name="eNothingFound">Pretraga nije dala rezultate, pokušajte sa pretragom druge kategorije.</string>
    <string name="eReviewBadge">myTour medalja za ocjenu preko 4.5</string>
    <string name="eReviewedAlready">Već ste dali recenziju ovog mijesta!</string>
    <string name="eReviewTitle">Dodavanje nove recenzije</string>
    <string name="eReviewAdd">Dodaj recenziju</string>
    <string name="eReviewCancel">Odustani</string>
    <string name="eReviewErrTxt">Recenzija odbaćena, text mora imati najmanje 15 karaktera!</string>
    <string name="eReviewDesc">Molimo opišite vaše iskustvo...</string>
    <string name="eReviewErrUnkw">Došlo je do pogreške molimo pokušajte kasnije!</string>

    <string name="eReviewOneStar">Izuzetno užasno</string>
    <string name="eReviewTwoStar">Užasno</string>
    <string name="eReviewThreeStar">Dobro</string>
    <string name="eReviewFourStar">Odlično</string>
    <string name="eReviewFiveStar">Izuzetno odlično</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>
