<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/pocetna"
        android:title="@string/fHome" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map"
        android:title="@string/fMap" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/lupa"
        android:title="@string/fExplore" />

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/leaderboard_icon"
        android:title="@string/fLeaderboard"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profil"
        android:title="@string/fProfile" />


</menu>