<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/pfad_42"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:background="@drawable/zemlja"
            android:layout_marginLeft="-144dp"
            android:layout_marginTop="21dp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RegisterTopBanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="98dp"
            android:background="@drawable/login_container">

            <TextView
                android:id="@+id/RegisterErrorMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-black"
                android:paddingLeft="20dp"
                android:text="."
                android:textAlignment="textStart"
                android:textColor="@color/dark_red"
                android:textSize="10dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisterPasswordAgain" />

            <TextView
                android:id="@+id/RegisterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/rTitle"
                android:textColor="@color/dark_orange"
                android:textSize="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/RegisterSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/rSubTitle"
                android:textColor="@color/dark_orange"
                android:textSize="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisterTitle" />


            <EditText
                android:id="@+id/RegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_field"
                android:ems="10"
                android:hint="@string/rlEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/stroke_gray"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisterUsername"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/RegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_field"
                android:ems="10"
                android:hint="@string/rlUsername"
                android:inputType="textEmailAddress"
                android:maxLength="16"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/stroke_gray"
                android:textSize="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/RegisterTitle"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_field"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/rlPass"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/stroke_gray"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisterEmail"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/RegisterPasswordAgain"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_field"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/rPassAgain"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="20dp"
                android:textAlignment="textStart"
                android:textColor="@color/stroke_gray"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisterPassword"
                tools:ignore="MissingConstraints" />


            <Button
                android:id="@+id/RegisterBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_login"
                android:drawableLeft="@drawable/zemlja_icon"
                android:text="@string/rBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisterPassword" />


            <TextView
                android:id="@+id/RegisterTermsOfUse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/rTerms"
                android:textAlignment="center"
                android:textColor="@color/dark_orange"
                android:textSize="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegisterBtn" />

            <ProgressBar
                android:id="@+id/RegisterProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/RegisterTermsOfUse" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-21dp"
            android:layout_marginEnd="-35dp"
            android:background="@drawable/mijesec" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/bannertop_white" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>