<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pocetna.PocetnaFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@drawable/pfad_42"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/hSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/hSubTitle"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hTtile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/hTitle"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/hSubtitle"
            app:layout_constraintTop_toBottomOf="@+id/hSubtitle" />

        <ImageView
            android:id="@+id/imgEarth"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/zemlja"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/featuredCities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/hCityTitle"
            android:textColor="@color/blue_grad2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fCityRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuredCities"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/featuredNature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/hNatureTitle"
            android:textColor="@color/blue_grad2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fCityRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fNatureRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/featuredNature" />

</androidx.constraintlayout.widget.ConstraintLayout>
